Ajustes JWT, Producto y Orden